fix: fix html syntax

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<p><img src="https://avatars.githubusercontent.com/u/95431867?v=4" alt="photo"/></p>
+<p><img src="https://avatars.githubusercontent.com/u/95431867?v=4" alt="photo"></p>
 <h1 id="alexey-titkov">Alexey Titkov</h1>
 
 <h3 id="student-frontend-developer">Student Frontend Developer</h3>
 
-<hr/>
+<hr>
 
 <h3 id="contact-information">Contact information:</h3>
 
@@ -56,13 +56,13 @@
     </tbody>
 </table>
 
-<hr/>
+<hr>
 
 <h3 id="briefly-about-myself">Briefly About Myself:</h3>
 
 <p>After graduating from the Moscow Power Engineering Institute, I worked as an energy engineer in food production
     factory for about 2.5 years and for another 6 years after that as a leading energy engineer in public catering
-    and retail.<br/></p>
+    and retail.</p>
 
 <p>In recent years, I have been thinking about changing my profession. While working, I started studying frontend
     development in courses.
@@ -70,21 +70,21 @@
     the thoughtfulness of the language, as well as by those who create and develop it all - the community of
     programmers. I realized that I like it, and I want to be a part of it and work as a Software Developer.
     However, the work took too much time, which was not enough for a full-fledged study of frontend development, I
-    had to put my studies on pause.<br/></p>
+    had to put my studies on pause.</p>
 
 <p>And in February 2023, I decided not to renew my employment contract as an energy engineer, quit and began
     studying frontend development at The Rolling Scopes School course.
     So now I’m starting to fully devote myself to studying and believe, that my ability to learn and to gain new
     skills will lead me through this path of becoming a proficient Software Developer on interesting and useful
     projects.
-    <br/></p>
+    </p>
 
 <p>So now my motto is:</p>
 <blockquote>
-    <p><em>Not a step back and not a day without a line of code!</em><br/></p>
+    <p><em>Not a step back and not a day without a line of code!</em></p>
 </blockquote>
 
-<hr/>
+<hr>
 
 <h3 id="skills">Skills:</h3>
 
@@ -97,7 +97,7 @@
     <li>KOMPAS-3D, Mathcad, Adobe Photoshop</li>
 </ul>
 
-<hr/>
+<hr>
 <h3 id="code-example">Code example:</h3>
 
 <p><strong>Credit Card Mask KATA from CODEWARS:</strong> Your task is to write a function maskify, which changes all
@@ -118,7 +118,7 @@
 </code></pre>
     </div>
 </div>
-<hr/>
+<hr>
 
 <h3 id="education-and-courses">Education and Courses:</h3>
 
@@ -140,7 +140,7 @@
     </li>
 </ul>
 
-<hr/>
+<hr>
 
 <h3 id="languages">Languages:</h3>
 
