--- a/index.html
+++ b/index.html
@@ -21,36 +21,36 @@
 <table>
     <thead>
     <tr>
-        <th style="text-align: center"><strong>Location:</strong></th>
-        <th style="text-align: center"><a href="https://goo.gl/maps/3vQwfKdwCu5SrXA48">Vitebsk, Belarus</a></th>
+        <td><strong>Location:</strong></td>
+        <td><a href="https://goo.gl/maps/3vQwfKdwCu5SrXA48">Vitebsk, Belarus</a></td>
     </tr>
     </thead>
     <tbody>
     <tr>
-        <td style="text-align: center"><strong>Phone:</strong></td>
-        <td style="text-align: center">+375298904398</td>
+        <td><strong>Phone:</strong></td>
+        <td>+375298904398</td>
     </tr>
     <tr>
-        <td style="text-align: center"><strong>E-mail:</strong></td>
-        <td style="text-align: center"><a href="mailto:alexey.titkov.work@gmail.com">alexey.titkov.work@gmail.com</a>
+        <td><strong>E-mail:</strong></td>
+        <td><a href="mailto:alexey.titkov.work@gmail.com">alexey.titkov.work@gmail.com</a>
         </td>
     </tr>
     <tr>
-        <td style="text-align: center"><strong>Telegram:</strong></td>
-        <td style="text-align: center"><a href="https://t.me/Alexey_Titkov">@Alexey_Titkov</a></td>
+        <td><strong>Telegram:</strong></td>
+        <td><a href="https://t.me/Alexey_Titkov">@Alexey_Titkov</a></td>
     </tr>
     <tr>
-        <td style="text-align: center"><strong>GitHub:</strong></td>
-        <td style="text-align: center"><a href="https://github.com/AlexeyTitkov">AlexeyTitkov</a></td>
+        <td><strong>GitHub:</strong></td>
+        <td><a href="https://github.com/AlexeyTitkov">AlexeyTitkov</a></td>
     </tr>
     <tr>
-        <td style="text-align: center"><strong>LinkedIn:</strong></td>
-        <td style="text-align: center"><a
+        <td><strong>LinkedIn:</strong></td>
+        <td><a
                 href="https://www.linkedin.com/in/alexey-titkov-952528219">AlexeyTitkov</a></td>
     </tr>
     <tr>
-        <td style="text-align: center"><strong>Discord:</strong></td>
-        <td style="text-align: center"><a href="https://www.linkedin.com/in/alexey-titkov-952528219">AlexeyTitkov
+        <td><strong>Discord:</strong></td>
+        <td><a href="https://www.linkedin.com/in/alexey-titkov-952528219">AlexeyTitkov
             (@AlexeyTitkov)</a></td>
     </tr>
     </tbody>
@@ -77,7 +77,7 @@
     So now I’m starting to fully devote myself to studying and believe, that my ability to learn and to gain new
     skills will lead me through this path of becoming a proficient Software Developer on interesting and useful
     projects.
-    </p>
+</p>
 
 <p>So now my motto is:</p>
 <blockquote>
